<resources>
    <string name="app_name">CA326DRAWER</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CA326 Contact Tracing App</string>
    <string name="nav_header_subtitle">michael.joyce32@mail.dcu.ie</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="title_home">Home</string>
    <string name="title_homepg">Contact Tracing Home</string>
    <string name="title_health">Health</string>
    <string name="title_healthpg">Health Section</string>
    <string name="title_check">Check - In</string>
    <string name="title_healthdesc">Here you can review your previous health history, location data, amount of users you have come into contact with and also input your daily check in, which allows you to notify the
        app of a possible covid case allowing the app to notify others. It is with great recommendation that you report any symptoms you may have.</string>
    <string name="title_history">Health History</string>
    <string name="title_cases">Cases</string>
    <string name="title_casespg">Cases Section</string>
    <string name="title_settings">Settings</string>
    <string name="title_settingspg">Settings Section</string>
    <string name="title_author">By David Moore and Michael Joyce</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_cases">Cases</string>
    <string name="menu_health">Health</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_health">Health</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Create an Account!</string>


    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>

    <string name="logout">logout</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
</resources>