<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ca326drawer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <activity
        android:id="@+id/nav_health"
        android:name="com.example.ca326drawer.HealthActivity"
        android:label="@string/menu_health"
        tools:layout="@layout/activity_health" />

    <activity
        android:id="@+id/nav_cases"
        android:name="com.example.ca326drawer.CaseActivity"
        android:label="@string/menu_cases"
        tools:layout="@layout/activity_live_data" />
</navigation>