<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context=".HealthActivity">
<TextView
    android:id="@+id/text_health"
    android:layout_centerHorizontal="true"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:textSize="35dp"
    android:text="Health"
    />
<Button
    android:id="@+id/checkinbutton"
    android:layout_width="156dp"
    android:layout_height="55dp"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_marginTop="5dp"
    android:gravity="center_vertical|center_horizontal"
    android:layout_below="@+id/historybutton"
    android:text="@string/title_check"
    android:onClick="goCheckIn"  />

<TextView
    android:id="@+id/author"
    android:layout_width="279dp"
    android:layout_height="78dp"
    android:layout_below="@+id/checkinbutton"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="43dp"
    android:gravity="center_vertical|center_horizontal"
    android:text="@string/title_author" />

<Button
    android:id="@+id/historybutton"
    android:layout_width="156dp"
    android:layout_height="55dp"
    android:layout_below="@+id/desc"
    android:layout_marginTop="20dp"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:gravity="center_vertical|center_horizontal"
    android:text="@string/title_history" />

<ImageView
    android:id="@+id/imageView2"
    android:layout_width="410dp"
    android:layout_height="158dp"
    android:layout_margin="15dp"
    android:layout_below="@+id/text_health"
    android:layout_centerHorizontal="true"
    android:gravity="center_vertical|center_horizontal"
    android:src="@drawable/health" />
<TextView
    android:id="@+id/desc"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_margin="50dp"
    android:layout_below="@+id/imageView2"
    android:gravity="center_vertical|center_horizontal"
    android:text="@string/title_healthdesc"/>

</RelativeLayout>